--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,9 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.21",
     "@nestjs/typeorm": "^10.0.0",
-    "@nestjs/websockets": "^10.0.0",
+    "@nestjs/websockets": "^10.4.21",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -37,7 +37,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
